CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(SDVRP)

if (CMAKE_BUILD_TYPE STREQUAL "DEBUG")
	message(STATUS "DEBUG MODE")
else (CMAKE_BUILD_TYPE STREQUAL "RELEASE")
	message(STATUS "RELEASE MODE")
else ()
	message(STATUS "BUG")
endif ()


SET(CMAKE_CXX_FLAGS "-std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "-DDEBUG -O2")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")

SET(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB_RECURSE CORE_SOURCES "src/core/*.cpp")
FILE(GLOB_RECURSE CORE_HEADERS "src/core/*.h")
FILE(GLOB_RECURSE UTILITY_SOURCES "src/utility/*.cpp")
FILE(GLOB_RECURSE UTILITY_HEADERS "src/utility/*.h")
FILE(GLOB_RECURSE ALGORITHM_SOURCES "src/algorithm/*.cpp")
FILE(GLOB_RECURSE ALGORITHM_HEADERS "src/algorithm/*.h")

FILE(GLOB_RECURSE MAIN "src/main.cpp")

INCLUDE_DIRECTORIES(src/)

ADD_LIBRARY(core ${CORE_SOURCES})

ADD_LIBRARY(algorithm ${ALGORITHM_SOURCES})
TARGET_LINK_LIBRARIES(algorithm core)

ADD_EXECUTABLE(solver ${MAIN})
TARGET_LINK_LIBRARIES(solver algorithm)
